<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailrecipe.fragmentingredient.IngredientFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/tv_ingredients_dashboard"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/tv_total_ingredient"
            android:textColor="@color/Muted"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_ingredient" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/tv_creator_ingredient"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvIngredient" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:clickable="true"
            android:src="@drawable/image_profile"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/tv_name_home"
            android:textColor="@color/Muted"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/img_profile"
            app:layout_constraintTop_toBottomOf="@id/title2" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/tv_name_description_ingredient"
            android:textColor="@color/Muted"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/img_profile"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRelatedRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>