<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.result.ResultActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageButton
           android:id="@+id/btn_close"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:layout_gravity="right"
           android:layout_marginTop="10dp"
           android:layout_marginRight="10dp"
           android:src="@drawable/ic_close"
           android:layout_margin="10dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <ImageButton
           android:id="@+id/btn_favorit"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:layout_gravity="right"
           android:layout_marginTop="10dp"
           android:layout_marginRight="10dp"
           android:src="@drawable/ic_save"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <androidx.cardview.widget.CardView
           android:id="@+id/card_result"
           android:layout_width="match_parent"
           android:layout_height="180dp"
           android:layout_marginTop="30dp"
           android:clickable="true"
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
           app:cardBackgroundColor="@color/Dark"
           app:cardCornerRadius="16dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btn_close">

           <LinearLayout
               android:id="@+id/btn_detail_recipe"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:clickable="true"
               android:padding="16dp">

               <com.google.android.material.imageview.ShapeableImageView
                   android:id="@+id/img_highlight_recipe"
                   android:layout_width="180dp"
                   android:layout_height="130dp"
                   android:layout_marginTop="10dp"
                   android:scaleType="fitXY"
                   android:src="@drawable/image_profile"
                   app:shapeAppearanceOverlay="@style/RoundedImageView" />

               <TextView
                   android:id="@+id/tv_program"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:lines="2"
                   android:maxLines="2"
                   android:textAlignment="center"
                   android:layout_marginTop="50dp"
                   android:fontFamily="@font/poppinsmedium"
                   android:text="@string/tv_name_recipe_hiighlight_home"
                   android:textColor="@color/white"
                   android:textSize="16sp"
                   android:textStyle="bold" />

           </LinearLayout>

       </androidx.cardview.widget.CardView>


       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvCategory"
           android:layout_width="0dp"
           android:layout_height="50dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/card_result" />

       <TextView
           android:id="@+id/title5"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:fontFamily="@font/poppinsbold"
           android:text="@string/tv_nutrion_values_result"
           android:layout_marginLeft="10dp"
           android:textColor="@color/Dark"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/rvCategory" />

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvNutrion"
           android:layout_width="match_parent"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="10dp"
           android:layout_height="140dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title5" />

       <TextView
           android:id="@+id/title6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:fontFamily="@font/poppinsbold"
           android:text="@string/tv_related_recipes_result"
           android:textColor="@color/Dark"
           android:textSize="18sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/rvNutrion" />


       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvRelatedRecipe"
           android:layout_width="match_parent"
           android:layout_marginLeft="10dp"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title6" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>